--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,47 @@ input, select, textarea {
 	appearance: none;
 }
 
+.avatar-circle {
+	border-radius: 50%;
+	max-width: 25vw;
+	margin-bottom: 20px;
+}
+
+#skills {
+	margin-top: 40px;
+	background-color: rgb(184, 184, 184);
+	width: fit-content;
+	padding: 10px;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+}
+
+#skills img {
+	margin: 10px;
+}
+
+#skills-container {
+	display: flex;
+	justify-content: center;
+}
+
+.technologies {
+	margin-top: 10px;
+	/* background-color: rgb(218, 218, 218); */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.technologies img {
+	margin: 5px;
+}
+
+.item header {
+	background-color: blue;
+}
+
 /* Basic */
 
 	html {
@@ -1948,7 +1989,7 @@ input, select, textarea {
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #908ebe;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -1966,7 +2007,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #9ececc;
+			background-color: #837de6;
 		}
 
 		input[type="button"]:active,
@@ -1974,7 +2015,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background-color: #7eaeac;
+			background-color: #837de6;
 		}
 
 /* Item */
@@ -1985,7 +2026,7 @@ input, select, textarea {
 	}
 
 		.item header {
-			background: #fff;
+			background: rgb(241, 242, 255);
 			margin: 0;
 			padding: 1em 0 1em 0;
 			font-size: 0.8em;
@@ -2169,7 +2210,7 @@ input, select, textarea {
 				}
 
 					#nav ul li a.active span:before {
-						color: #e27689;
+						color: #769ee2;
 					}
 
 /* Footer */
@@ -2241,14 +2282,16 @@ input, select, textarea {
 					}
 
 			#main > section.cover {
-				padding: 10em 0;
+				padding: 7em 0;
 				background-size: cover;
 				background-position: center center;
 			}
 
 			#main > section.one {
-				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background: rgb(2,0,36);
+				background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(122,134,0,1) 100%);
+				/* background-color: #81918E;
+				background-image: url("../../images/banner.jpg"); */
 			}
 
 			#main > section.two {
