hover color update

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #E27689;
+			color: #7698e2;
 			border-bottom-color: rgba(255, 255, 255, 0);
 		}
 
